--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-sqlalchemy = "*"
 passlib = {extras = ["bcrypt"], version = "*"}
 python-multipart = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
+psycopg2-binary = "*"
 
 [dev-packages]
 
